<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.foreldrepenger.autotest</groupId>
    <artifactId>autotest</artifactId>
    <packaging>jar</packaging>
    <version>${revision}${sha1}${changelist}</version>
    <name>FPSAK :: AutoTest</name>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0.0</revision>
        <sha1/>
        <changelist>-SNAPSHOT</changelist>

        <vtp.versjon>1.0-2020.11.24.142948-35511ff</vtp.versjon>

        <aspectj.version>1.9.6</aspectj.version>

        <jackson.version>2.11.3</jackson.version>

        <dokumentgenerator.version>1.0-20200327105749-73dec14</dokumentgenerator.version>
    </properties>

    <profiles>
        <profile>
            <id>fpsak</id>
            <properties>
                <includeTestsTags>fpsak</includeTestsTags>
                <excludeTestsTags>test, pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>fptilbake</id>
            <properties>
                <testsTags>fptilbake, tilbakekreving</testsTags>
                <testPackage>no.nav.foreldrepenger.autotest.fptilbake.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>fprisk</id>
            <properties>
                <testTags>fprisk</testTags>
                <testPackage>no.nav.foreldrepenger.autotest.fprisk.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>svangerskapspenger</id>
            <properties>
                <includeTestsTags>svangerskapspenger</includeTestsTags>
                <excludeTestsTags>test, pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>verdikjede</id>
            <properties>
                <includeTestsTags>verdikjede</includeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>utvikling</id>
            <properties>
                <includeTestsTags>utvikling</includeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.**</testPackage>
            </properties>
        </profile>
        <profile>
            <id>internal</id>
            <properties>
                <includeTestsTags>internal</includeTestsTags>
                <excludeTestsTags>pending</excludeTestsTags>
                <testPackage>no.nav.foreldrepenger.autotest.internal.**</testPackage>
            </properties>
            <activation>
            	<activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        -Dfile.encoding=UTF-8
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <properties>
                        <configurationParameters>
                            junit.jupiter.extensions.autodetection.enabled = true
                            junit.jupiter.execution.parallel.enabled = true
                            junit.jupiter.execution.parallel.mode.default = concurrent
                            junit.jupiter.execution.parallel.mode.classes.default = same_thread
                            junit.jupiter.execution.parallel.config.strategy = fixed
                            junit.jupiter.execution.parallel.config.fixed.parallelism = 4
                        </configurationParameters>
                    </properties>
                    <includes>
                        <include>${testPackage}</include>
                    </includes>
                    <groups>${includeTestsTags}</groups>
                    <excludedGroups>${excludeTestsTags}</excludedGroups>
                    <systemPropertyVariables>
                        <application.root>${maven.multiModuleProjectDirectory}</application.root>
                    </systemPropertyVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportDirectory>target/allure-report</reportDirectory>
                    <reportingOutputDirectory>target/allure-report</reportingOutputDirectory>
                    <reportVersion>2.13.1</reportVersion>
                    <allureDownloadUrl>https://repo1.maven.org/maven2/io/qameta/allure/allure-commandline/2.13.1/allure-commandline-2.13.1.zip</allureDownloadUrl>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.18.16.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>delombok</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <!-- External dependencies -->
    	 <dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter</artifactId>
             <version>5.7.0</version>
         </dependency>
		<dependency>
		    <groupId>org.junit.platform</groupId>
		    <artifactId>junit-platform-launcher</artifactId>
            <version>1.7.0</version>
        </dependency>

		<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-parameter-names</artifactId>
            <version>${jackson.version}</version>

        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>${jackson.version}</version>

        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>2.13.7</version>
        </dependency>

        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jandex</artifactId>
            <version>2.2.2.Final</version>
        </dependency>


        <!-- VTP prosjektavhengigheter -->
        <dependency>
            <groupId>no.nav.foreldrepenger.vtp</groupId>
            <artifactId>testmodell</artifactId>
            <version>${vtp.versjon}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.vtp</groupId>
            <artifactId>core</artifactId>
            <version>${vtp.versjon}</version>
        </dependency>

        <!-- Autotest dokumentgenerator avhengigheter -->
        <dependency>
            <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
            <artifactId>inntektsmelding</artifactId>
            <version>${dokumentgenerator.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
            <artifactId>foreldrepengesoknad</artifactId>
            <version>${dokumentgenerator.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.18.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-common</artifactId>
            <version>2.32</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
            <version>2.1.6</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.16</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.neovisionaries</groupId>
            <artifactId>nv-i18n</artifactId>
            <version>1.27</version>
        </dependency>

    </dependencies>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/fpsak-autotest</url>
        </repository>
    </distributionManagement>
</project>
